remove resume links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </section>
 
-        <!-- About section & Download CV -->
+        <!-- About section -->
 
         <section id="about">
             <div class="section-header">
@@ -75,7 +75,6 @@
                         I thrive on tackling complex problems and creating innovative solutions. <br><br>
                         If you like what you see, feel free to reach out to me. I look forward to connecting with you!
                     </p> <br>
-                    <a target="_blank" class="btn-live" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a>
                 </div>
             </div>
         </section>
@@ -521,18 +520,13 @@
                     </div>
                     <div class="tooltip">
                         <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
-                        <span class="tooltip-text" style="left: -5%">Send an email to deyanvasilev7@gmail.com</span>
-                    </div>
-                    <div class="tooltip">
-                        <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
-                        <span class="tooltip-text">Download resume</span>
+                        <span class="tooltip-text">Send me an email</span>
                     </div>
                 </div>
                 <div class="contact-links">
                     <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/">LinkedIn <i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fab fa-github github"></i></a>
-                    <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
-                    <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">CV <i class="fa-solid fa-file"></i></a>
+                    <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">Email <i class="fas fa-envelope mail"></i></a>
                 </div>
                 <p>Website designed and developed by Deyan Vasilev</p>
         </section>
