update ms sql icons

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <span class="tooltip-text">C#</span>
                         </div>
                         <div class="tooltip">
-                            <i class="devicon-microsoftsqlserver-plain-wordmark slide-tech"></i>
+                            <i class="devicon-microsoftsqlserver-plain colored slide-tech"></i>
                             <span class="tooltip-text">Microsoft SQL Server</span>
                         </div>
                         <div class="tooltip">
@@ -355,7 +355,7 @@
                                     <span class="tooltip-text">C#</span>
                                 </div>
                                 <div class="tooltip popuptip">
-                                    <i class="devicon-microsoftsqlserver-plain-wordmark project-tech"></i>
+                                    <i class="devicon-microsoftsqlserver-plain colored project-tech"></i>
                                     <span class="tooltip-text">Microsoft SQL Server</span>
                                 </div>
                                 <div class="tooltip popuptip">
