--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="preload" as="image" href="./images/farzad-p-xSl33Wxyc-unsplash.jpg">
     <link rel="preload" as="image" href="./images/orders.png">
     <link rel="preload" as="image" href="./images/thai.png">
@@ -52,7 +56,7 @@
     <!-- Hero section -->
     <main>
         <section id="hero">
-            <div>
+            <div class="animatable">
                 <h1>Deyan Vasilev</h1>
                 <h2>Software Engineer</h2> 
             </div>
@@ -61,20 +65,23 @@
         <!-- About section -->
 
         <section id="about">
-            <div class="section-header">
+            <div class="animatable section-header">
                 <h2>About Me</h2>
-                <p>I am a T-shaped, Front-end Software Engineer based in the Greater Saint Louis area</p>
+                <p>I am a software engineer specializing in JavaScript and React</p>
             </div>
-            <div class="about-container">
+            <div class="animatable about-container">
                 <div class="about-bio">
                     <p>
-                        I’m Deyan, a Software Engineer based in the Greater Saint Louis area. Originally from Bulgaria, I’ve called the United States home since 2012. <br><br>
-                        I specialize in Front-end development with JavaScript and React, but my expertise goes beyond just that. 
-                        I also have a strong background in back-end work, as showcased by my professional experience and personal projects. <br><br>
-                        My philosophy is simple: “Never get comfortable, always challenge yourself.” This mindset has driven my growth across all my roles. 
-                        I thrive on tackling complex problems and creating innovative solutions. <br><br>
-                        If you like what you see, feel free to reach out to me. I look forward to connecting with you!
-                    </p> <br>
+                        Hello and thank you for visiting my page! My name is Deyan, and I’m a Software Engineer based in the Greater St. Louis area. <br><br>
+                        With over 4 years of hands-on experience, I specialize in UI development using JavaScript and React. Additionally, 
+                        I’ve successfully leveraged technologies like Node.js, C#, and Python for both back-end and full-stack development, 
+                        applying them in both professional settings and personal projects. <br><br>
+                        As a continuous learner, I thrive on upskilling to meet new challenges, delivering immediate value to my team and 
+                        organization. My adaptability has enabled me to save employers thousands in development costs over the years by quickly acquiring and applying new skills. <br><br>
+                        Currently, I’m seeking my next opportunity in either Front-end or Full-stack development. I’m drawn to innovative companies 
+                        that tackle complex problems and prioritize the professional growth of their employees.<br><br>
+                        If you believe we could be a good fit, I’d love to connect!
+                    </p>
                 </div>
             </div>
         </section>
@@ -82,21 +89,13 @@
         <!-- Skills section -->
 
         <section id="skills">
-            <div class="section-header">
+            <div class="animatable section-header">
                 <h2>Skills</h2> 
             </div>
 
             <div class="technologies">
-                <h3>Specializations</h3>
-                <div class="tech-stack">
-                    <div class="technology">
-                        <i class="devicon-react-original colored"></i>
-                        <span>REACT</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-nodejs-plain-wordmark colored"></i>
-                        <span>NODE</span>
-                    </div> 
+                <h3 class="animatable">Languages</h3>
+                <div class="animatable tech-stack">
                     <div class="technology">
                         <i class="devicon-javascript-plain colored"></i>
                         <span>JAVASCRIPT</span>
@@ -114,20 +113,9 @@
                         <span>CSS</span>
                     </div>
                     <div class="technology">
-                        <i class="devicon-materialui-plain colored"></i>
-                        <span>MATERIAL UI</span>
+                        <i class="devicon-csharp-plain-wordmark colored"></i>
+                        <span>C#</span>
                     </div>
-                    <div class="technology">
-                        <i class="devicon-redux-original colored"></i>
-                        <span>REDUX & RECOIL</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-jest-plain colored"></i>
-                        <span>JEST</span>
-                    </div>
-                </div>
-                <h3>Knowledgeable in</h3>
-                <div class="tech-stack">
                     <div class="technology">
                         <i class="devicon-python-plain colored"></i>
                         <span>PYTHON</span>
@@ -135,6 +123,29 @@
                     <div class="technology">
                         <i class="devicon-azuresqldatabase-plain colored"></i>
                         <span>SQL</span>
+                    </div>
+                </div>
+                <h3 class="animatable">Frameworks & Libraries</h3>
+                <div class="animatable tech-stack">
+                    <div class="technology">
+                        <i class="devicon-react-original colored"></i>
+                        <span>REACT</span>
+                    </div>
+                    <div class="technology">
+                        <i class="devicon-nodejs-plain-wordmark colored"></i>
+                        <span>NODE</span>
+                    </div> 
+                    <div class="technology">
+                        <i class="devicon-materialui-plain colored"></i>
+                        <span>MATERIAL UI</span>
+                    </div>
+                    <div class="technology">
+                        <i class="devicon-redux-original colored"></i>
+                        <span>REDUX</span>
+                    </div>
+                    <div class="technology">
+                        <i class="devicon-jest-plain colored"></i>
+                        <span>JEST</span>
                     </div>
                     <div class="technology">
                         <i class="devicon-express-original colored"></i>
@@ -153,23 +164,38 @@
                         <span>WEBFLOW</span>
                     </div>
                 </div>
+                <h3 class="animatable">Tools & Platforms</h3>
+                <div class="animatable tech-stack">
+                    <div class="technology">
+                        <i class="devicon-git-plain colored"></i>
+                        <span>Git</span>
+                    </div>  
+                    <div class="technology">
+                        <i class="devicon-github-original colored"></i>
+                        <span>GitHub</span>
+                    </div>  
+                    <div class="technology">
+                        <i class="devicon-azure-plain colored"></i>
+                        <span>Azure</span>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- Projects section -->
     
         <section id="projects">
-            <div class="section-header">
+            <div class="animatable section-header">
                 <h2>Projects</h2>
                 <h3>Some of the things I have worked on</h3>
             </div>
-            <p id="projects-introduction">
+            <p class="animatable" id="projects-introduction">
                 Enjoy a curated list of what I consider to be my best work. Hover over the icons (or tap on mobile) for more information on the tech stack I used. <br><br>
                 You can also check out my GitHub profile if you wish to see additional projects not listed on here.
             </p>
-            <a style="margin-bottom: 24px;" aria-label="Opens Deyan's GitHub profile in new tab" class="btn-source" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fa-solid fa-link"></i></a>
+            <a style="margin-bottom: 24px;" aria-label="Opens Deyan's GitHub profile in new tab" class="animatable btn-source" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fa-solid fa-link"></i></a>
             <!-- Carousel for bigger screens -->
-            <div class="slideshow-container">
+            <div class="animatable slideshow-container">
                 <div class="slide fade">
                 <div class="slide-position">1 / 3</div>
                 <img alt="Screenshot of Commercio Orders" src="./images/orders.png">
@@ -316,7 +342,7 @@
             <!-- Projects list for smaller screen -->
 
             <ul>
-                <li class="project">
+                <li class="animatable project">
                     <div class="project-header">
                         <h3 class="project-title">Commercio Orders</h3>
                     </div>
@@ -377,7 +403,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="project">
+                <li class="animatable project">
                     <div class="project-header">
                         <h3 class="project-title">Thai Sport Bodyworks - Official website</h3>
                     </div>
@@ -414,7 +440,7 @@
                     </div>
                 </li>
 
-                <li class="project">
+                <li class="animatable project">
                     <div class="project-header">
                         <h3 class="project-title">Frog Feast - Hackathon winner</h3>
                     </div>
@@ -508,8 +534,8 @@
 
     <footer>
         <section id="contact">
-                <h3 class="contact-heading">Contact information</h3>
-                <div class="contact-icons">
+                <h3 class="animatable contact-heading">Contact information</h3>
+                <div class="animatable contact-icons">
                     <div class="tooltip">
                         <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/"><i class="fab fa-linkedin linkedin"></i></a>
                         <span class="tooltip-text">LinkedIn profile</span>
@@ -523,12 +549,12 @@
                         <span class="tooltip-text">Send me an email</span>
                     </div>
                 </div>
-                <div class="contact-links">
+                <div class="animatable contact-links">
                     <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/">LinkedIn <i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fab fa-github github"></i></a>
                     <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">Email <i class="fas fa-envelope mail"></i></a>
                 </div>
-                <p>Website designed and developed by Deyan Vasilev</p>
+                <p class="animatable">Website designed and developed by Deyan Vasilev</p>
         </section>
     </footer>
 <script src="app.js"></script>
