add fade-in animation to carousel dots

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
             <br>
             
-            <div class="dots-container">
+            <div class="animatable dots-container">
                 <span class="dot" aria-label="Switches to first slide" onclick="currentSlide(1)"></span>
                 <span class="dot" aria-label="Switches to second slide" onclick="currentSlide(2)"></span>
                 <span class="dot" aria-label="Switches to third slide" onclick="currentSlide(3)"></span>
