fix typo in about section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <p>
                         Hello and thank you for visiting my page! My name is Deyan, and I’m a Software Engineer based in the Greater St. Louis area. <br><br>
                         With over 4 years of hands-on experience, I specialize in UI development using JavaScript and React. Additionally, 
-                        I’ve successfully leveraged technologies like Node.js, C#, and Python for both back-end and full-stack development, 
+                        I’ve successfully leveraged technologies like Node.js, C#, and Python for both Back-end and Full-stack development, 
                         applying them in both professional settings and personal projects. <br><br>
                         As a continuous learner, I thrive on upskilling to meet new challenges, delivering immediate value to my team and 
                         organization. My adaptability has enabled me to save employers thousands in development costs over the years by quickly acquiring and applying new skills. <br><br>
